--- a/index.html
+++ b/index.html
@@ -27,24 +27,65 @@
     <div class="container">
       <!-- Card -->
       <div class="bg-white rounded-2xl max-w-5xl mx-auto shadow-xl py-5 my-5">
-        <label
-          for="square-footage"
-          class="capitalize text-2xl font-semibold text-center pt-4 block"
-        >
-          square footage
-        </label>
+        <!-- Square Footage Select -->
+        <div>
+          <label
+            for="square-footage"
+            class="capitalize text-2xl font-semibold text-center pt-4 block"
+          >
+            square footage
+          </label>
 
-        <select
-          name="square-foot"
-          id="square-footage"
-          class="py-2 px-4 border-2 block mx-auto my-4 font-serif"
-        >
-          <option value="">--Select Your Square Footage--</option>
-          <option value="1000">1000</option>
-          <option value="1500">1500</option>
-          <option value="2000">2000</option>
-          <option value="2500">2500</option>
-        </select>
+          <select
+            name="square-foot"
+            id="square-footage"
+            class="py-2 px-4 border-2 block mx-auto my-4 font-serif focus:outline-emerald-600"
+          >
+            <option value="">--Select Your Square Footage--</option>
+            <option value="1000">1000</option>
+            <option value="1500">1500</option>
+            <option value="2000">2000</option>
+            <option value="2500">2500</option>
+          </select>
+        </div>
+        <!-- End Of Square Footage Select -->
+        <!-- Rate Input Wrapper -->
+        <div class="md:flex md:items-center md:justify-center md:space-x-20">
+          <!-- Amount Per Hour Input -->
+          <div>
+            <label
+              for="amount-per-hour"
+              class="capitalize text-2xl font-semibold text-center block"
+            >
+              amount per hour
+            </label>
+            <input
+              type="number"
+              id="amount-per-hour"
+              class="py-2 px-4 border-2 block mx-auto my-4 font-serif w-20 focus:outline-emerald-600"
+              value="38"
+            />
+          </div>
+          <!-- End Of Amount Per Hour Input -->
+          <!-- Tax Rate Input -->
+          <div>
+            <label
+              for="tax-rate"
+              class="capitalize text-2xl font-semibold text-center block"
+            >
+              tax rate
+            </label>
+            <input
+              type="number"
+              id="tax-rate"
+              class="py-2 px-4 border-2 block mx-auto my-4 font-serif w-24 focus:outline-emerald-600"
+              value="0"
+              step=".01"
+            />
+          </div>
+          <!-- End Of Tax Rate Input -->
+        </div>
+        <!-- End Of Rate Input Wrapper -->
         <div
           class="quotes-container text-center px-10 space-y-5 md:space-y-0 md:space-x-5 md:flex md:justify-center md:flex-wrap md:gap-y-5"
         >
@@ -53,6 +94,10 @@
             <i
               class="fa-solid fa-hand-sparkles p-4 text-xl bg-white rounded-full"
             ></i>
+            <small
+              class="bg-red-500 p-2 rounded-full text-white font-semibold tracking-wider"
+              >Changed</small
+            >
             <h3
               class="capitalize tracking-wider font-bold font-serif text-xl my-4"
             >
