added js folder and file

--- a/index.html
+++ b/index.html
@@ -379,5 +379,6 @@
     <!-- IF YOU CLONE THIS FROM GITHUB THEN RUN THIS COMMAND FIRST IN THE TERMERNAL: npm install -->
 
     <!-- THEN RUN THE FOLLOWING COMMAND IN TERMANAL: npm run watch -->
+    <script src="./js/app.js"></script>
   </body>
 </html>
