--- a/index.html
+++ b/index.html
@@ -42,10 +42,18 @@
             class="py-2 px-4 border-2 block mx-auto my-4 font-serif focus:outline-emerald-600"
           >
             <option value="">--Select Your Square Footage--</option>
-            <option value="1000">1000</option>
-            <option value="1500">1500</option>
-            <option value="2000">2000</option>
-            <option value="2500">2500</option>
+            <option value="1000-1500">1000-1500</option>
+            <option value="1600-2000">1600-2000</option>
+            <option value="2100-2200">2100-2200</option>
+            <option value="2300-2500">2300-2500</option>
+            <option value="2600-2800">2600-2800</option>
+            <option value="2900-3100">2900-3100</option>
+            <option value="3200-3400">3200-3400</option>
+            <option value="3500-3700">3500-3700</option>
+            <option value="3800-4000">3800-4000</option>
+            <option value="4100-4300">4100-4300</option>
+            <option value="4400-4600">4400-4600</option>
+            <option value="4800-5000">4800-5000</option>
           </select>
         </div>
         <!-- End Of Square Footage Select -->
@@ -111,7 +119,7 @@
                 <small class="capitalize tracking-widest">price</small>
               </span>
               <small
-                class="py-2 px-4 bg-emerald-600 text-white font-semibold tracking-widest"
+                class="py-2 px-4 bg-emerald-600 text-white font-semibold tracking-widest deep-price"
                 >$200</small
               >
             </div>
@@ -123,7 +131,7 @@
                 <small class="capitalize tracking-widest">hours</small>
               </span>
               <small
-                class="py-2 px-4 bg-emerald-600 text-white font-semibold tracking-widest"
+                class="py-2 px-4 bg-emerald-600 text-white font-semibold tracking-widest deep-hours"
                 >13.5</small
               >
             </div>
@@ -167,7 +175,7 @@
                 <small class="capitalize tracking-widest">price</small>
               </span>
               <small
-                class="py-2 px-4 bg-emerald-600 text-white font-semibold tracking-widest"
+                class="py-2 px-4 bg-emerald-600 text-white font-semibold tracking-widest general-price"
                 >$200</small
               >
             </div>
@@ -179,7 +187,7 @@
                 <small class="capitalize tracking-widest">hours</small>
               </span>
               <small
-                class="py-2 px-4 bg-emerald-600 text-white font-semibold tracking-widest"
+                class="py-2 px-4 bg-emerald-600 text-white font-semibold tracking-widest general-hours"
                 >13.5</small
               >
             </div>
@@ -223,7 +231,7 @@
                 <small class="capitalize tracking-widest">price</small>
               </span>
               <small
-                class="py-2 px-4 bg-emerald-600 text-white font-semibold tracking-widest"
+                class="py-2 px-4 bg-emerald-600 text-white font-semibold tracking-widest weekly-price"
                 >$200</small
               >
             </div>
@@ -235,7 +243,7 @@
                 <small class="capitalize tracking-widest">hours</small>
               </span>
               <small
-                class="py-2 px-4 bg-emerald-600 text-white font-semibold tracking-widest"
+                class="py-2 px-4 bg-emerald-600 text-white font-semibold tracking-widest weekly-hours"
                 >13.5</small
               >
             </div>
@@ -279,7 +287,7 @@
                 <small class="capitalize tracking-widest">price</small>
               </span>
               <small
-                class="py-2 px-4 bg-emerald-600 text-white font-semibold tracking-widest"
+                class="py-2 px-4 bg-emerald-600 text-white font-semibold tracking-widest bi-weekly-price"
                 >$200</small
               >
             </div>
@@ -291,7 +299,7 @@
                 <small class="capitalize tracking-widest">hours</small>
               </span>
               <small
-                class="py-2 px-4 bg-emerald-600 text-white font-semibold tracking-widest"
+                class="py-2 px-4 bg-emerald-600 text-white font-semibold tracking-widest bi-weekly-hours"
                 >13.5</small
               >
             </div>
@@ -335,7 +343,7 @@
                 <small class="capitalize tracking-widest">price</small>
               </span>
               <small
-                class="py-2 px-4 bg-emerald-600 text-white font-semibold tracking-widest"
+                class="py-2 px-4 bg-emerald-600 text-white font-semibold tracking-widest monthly-price"
                 >$200</small
               >
             </div>
@@ -347,7 +355,7 @@
                 <small class="capitalize tracking-widest">hours</small>
               </span>
               <small
-                class="py-2 px-4 bg-emerald-600 text-white font-semibold tracking-widest"
+                class="py-2 px-4 bg-emerald-600 text-white font-semibold tracking-widest monthly-hours"
                 >13.5</small
               >
             </div>
