--- a/index.html
+++ b/index.html
@@ -27,73 +27,75 @@
     <div class="container">
       <!-- Card -->
       <div class="bg-white rounded-2xl max-w-5xl mx-auto shadow-xl py-5 my-5">
-        <!-- Square Footage Select -->
-        <div>
-          <label
-            for="square-footage"
-            class="capitalize text-2xl font-semibold text-center pt-4 block"
-          >
-            square footage
-          </label>
+        <form class="form-control">
+          <!-- Square Footage Select -->
+          <div>
+            <label
+              for="square-footage"
+              class="capitalize text-2xl font-semibold text-center pt-4 block"
+            >
+              square footage
+            </label>
 
-          <select
-            name="square-foot"
-            id="square-footage"
-            class="py-2 px-4 border-2 block mx-auto my-4 font-serif focus:outline-emerald-600"
-          >
-            <option value="">--Select Your Square Footage--</option>
-            <option value="1000-1500">1000-1500</option>
-            <option value="1600-2000">1600-2000</option>
-            <option value="2100-2200">2100-2200</option>
-            <option value="2300-2500">2300-2500</option>
-            <option value="2600-2800">2600-2800</option>
-            <option value="2900-3100">2900-3100</option>
-            <option value="3200-3400">3200-3400</option>
-            <option value="3500-3700">3500-3700</option>
-            <option value="3800-4000">3800-4000</option>
-            <option value="4100-4300">4100-4300</option>
-            <option value="4400-4600">4400-4600</option>
-            <option value="4800-5000">4800-5000</option>
-          </select>
-        </div>
-        <!-- End Of Square Footage Select -->
-        <!-- Rate Input Wrapper -->
-        <div class="md:flex md:items-center md:justify-center md:space-x-20">
-          <!-- Amount Per Hour Input -->
-          <div>
-            <label
-              for="amount-per-hour"
-              class="capitalize text-2xl font-semibold text-center block"
+            <select
+              name="square-foot"
+              id="square-footage"
+              class="py-2 px-4 border-2 block mx-auto my-4 font-serif focus:outline-emerald-600"
             >
-              amount per hour
-            </label>
-            <input
-              type="number"
-              id="amount-per-hour"
-              class="py-2 px-4 border-2 block mx-auto my-4 font-serif w-20 focus:outline-emerald-600"
-              value="38"
-            />
+              <option value="">--Select Your Square Footage--</option>
+              <option value="1000-1500">1000-1500</option>
+              <option value="1600-2000">1600-2000</option>
+              <option value="2100-2200">2100-2200</option>
+              <option value="2300-2500">2300-2500</option>
+              <option value="2600-2800">2600-2800</option>
+              <option value="2900-3100">2900-3100</option>
+              <option value="3200-3400">3200-3400</option>
+              <option value="3500-3700">3500-3700</option>
+              <option value="3800-4000">3800-4000</option>
+              <option value="4100-4300">4100-4300</option>
+              <option value="4400-4600">4400-4600</option>
+              <option value="4800-5000">4800-5000</option>
+            </select>
           </div>
-          <!-- End Of Amount Per Hour Input -->
-          <!-- Tax Rate Input -->
-          <div>
-            <label
-              for="tax-rate"
-              class="capitalize text-2xl font-semibold text-center block"
-            >
-              tax rate
-            </label>
-            <input
-              type="number"
-              id="tax-rate"
-              class="py-2 px-4 border-2 block mx-auto my-4 font-serif w-24 focus:outline-emerald-600"
-              value="0"
-              step=".01"
-            />
+          <!-- End Of Square Footage Select -->
+          <!-- Rate Input Wrapper -->
+          <div class="md:flex md:items-center md:justify-center md:space-x-20">
+            <!-- Amount Per Hour Input -->
+            <div>
+              <label
+                for="amount-per-hour"
+                class="capitalize text-2xl font-semibold text-center block"
+              >
+                amount per hour
+              </label>
+              <input
+                type="number"
+                id="amount-per-hour"
+                class="py-2 px-4 border-2 block mx-auto my-4 font-serif w-20 focus:outline-emerald-600"
+                value="38"
+              />
+            </div>
+            <!-- End Of Amount Per Hour Input -->
+            <!-- Tax Rate Input -->
+            <div>
+              <label
+                for="tax-rate"
+                class="capitalize text-2xl font-semibold text-center block"
+              >
+                tax rate
+              </label>
+              <input
+                type="number"
+                id="tax-rate"
+                class="py-2 px-4 border-2 block mx-auto my-4 font-serif w-24 focus:outline-emerald-600"
+                value="0"
+                step=".01"
+              />
+            </div>
+            <!-- End Of Tax Rate Input -->
           </div>
-          <!-- End Of Tax Rate Input -->
-        </div>
-        <!-- End Of Rate Input Wrapper -->
+          <!-- End Of Rate Input Wrapper -->
+        </form>
         <div
           class="quotes-container text-center px-10 space-y-5 md:space-y-0 md:space-x-5 md:flex md:justify-center md:flex-wrap md:gap-y-5"
         >
