fixed some mobile friendly css

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
             <select
               name="square-foot"
               id="square-footage"
-              class="py-2 px-4 border-2 block mx-auto my-4 font-serif focus:outline-emerald-600"
+              class="py-2 px-0 border-2 block mx-auto my-4 font-serif focus:outline-emerald-600 text-sm"
             >
-              <option value="">--Select Your Square Footage--</option>
+              <option value="">Select Your Square Footage</option>
               <option value="1000-1500">1000-1500</option>
               <option value="1600-2000">1600-2000</option>
               <option value="2100-2200">2100-2200</option>
@@ -120,7 +120,7 @@
                   <small class="capitalize tracking-widest">price</small>
                 </span>
                 <small
-                  class="py-2 px-4 bg-emerald-600 text-white font-semibold tracking-widest deep-price"
+                  class="py-2 px-4 bg-emerald-600 text-white font-semibold tracking-widest inline-block w-[90px] deep-price"
                   >$200</small
                 >
               </div>
@@ -132,7 +132,7 @@
                   <small class="capitalize tracking-widest">hours</small>
                 </span>
                 <small
-                  class="py-2 px-4 bg-emerald-600 text-white font-semibold tracking-widest deep-hours"
+                  class="py-2 px-4 bg-emerald-600 text-white font-semibold tracking-widest inline-block w-[90px] deep-hours"
                   >13.5</small
                 >
               </div>
@@ -180,7 +180,7 @@
                   <small class="capitalize tracking-widest">price</small>
                 </span>
                 <small
-                  class="py-2 px-4 bg-emerald-600 text-white font-semibold tracking-widest general-price"
+                  class="py-2 px-4 bg-emerald-600 text-white font-semibold tracking-widest inline-block w-[90px] general-price"
                   >$200</small
                 >
               </div>
@@ -192,7 +192,7 @@
                   <small class="capitalize tracking-widest">hours</small>
                 </span>
                 <small
-                  class="py-2 px-4 bg-emerald-600 text-white font-semibold tracking-widest general-hours"
+                  class="py-2 px-4 bg-emerald-600 text-white font-semibold tracking-widest inline-block w-[90px] general-hours"
                   >13.5</small
                 >
               </div>
@@ -235,7 +235,7 @@
                   <small class="capitalize tracking-widest">price</small>
                 </span>
                 <small
-                  class="py-2 px-4 bg-emerald-600 text-white font-semibold tracking-widest weekly-price"
+                  class="py-2 px-4 bg-emerald-600 text-white font-semibold tracking-widest inline-block w-[90px] weekly-price"
                   >$200</small
                 >
               </div>
@@ -247,7 +247,7 @@
                   <small class="capitalize tracking-widest">hours</small>
                 </span>
                 <small
-                  class="py-2 px-4 bg-emerald-600 text-white font-semibold tracking-widest weekly-hours"
+                  class="py-2 px-4 bg-emerald-600 text-white font-semibold tracking-widest inline-block w-[90px] weekly-hours"
                   >13.5</small
                 >
               </div>
@@ -290,7 +290,7 @@
                   <small class="capitalize tracking-widest">price</small>
                 </span>
                 <small
-                  class="py-2 px-4 bg-emerald-600 text-white font-semibold tracking-widest bi-weekly-price"
+                  class="py-2 px-4 bg-emerald-600 text-white font-semibold tracking-widest inline-block w-[90px] bi-weekly-price"
                   >$200</small
                 >
               </div>
@@ -302,7 +302,7 @@
                   <small class="capitalize tracking-widest">hours</small>
                 </span>
                 <small
-                  class="py-2 px-4 bg-emerald-600 text-white font-semibold tracking-widest bi-weekly-hours"
+                  class="py-2 px-4 bg-emerald-600 text-white font-semibold tracking-widest inline-block w-[90px] bi-weekly-hours"
                   >13.5</small
                 >
               </div>
@@ -345,7 +345,7 @@
                   <small class="capitalize tracking-widest">price</small>
                 </span>
                 <small
-                  class="py-2 px-4 bg-emerald-600 text-white font-semibold tracking-widest monthly-price"
+                  class="py-2 px-4 bg-emerald-600 text-white font-semibold tracking-widest inline-block w-[90px] monthly-price"
                   >$200</small
                 >
               </div>
@@ -357,7 +357,7 @@
                   <small class="capitalize tracking-widest">hours</small>
                 </span>
                 <small
-                  class="py-2 px-4 bg-emerald-600 text-white font-semibold tracking-widest monthly-hours"
+                  class="py-2 px-4 bg-emerald-600 text-white font-semibold tracking-widest inline-block w-[90px] monthly-hours"
                   >13.5</small
                 >
               </div>
