--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           </div>
           <!-- End Of Rate Input Wrapper -->
           <div
-            class="quotes-container text-center px-10 space-y-5 md:space-y-0 md:space-x-5 md:flex md:justify-center md:flex-wrap md:gap-y-5"
+            class="quotes-container text-center px-3 space-y-5 md:space-y-0 md:space-x-5 md:flex md:justify-center md:flex-wrap md:gap-y-5 sm:px-10"
           >
             <!-- Deep Clean -->
             <article class="p-3 bg-[#f8f3f9]">
