added better css for mobile

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <select
               name="square-foot"
               id="square-footage"
-              class="py-2 px-0 border-2 block mx-auto my-4 font-serif focus:outline-emerald-600 text-sm"
+              class="py-2 px-0 border-2 block mx-auto my-4 font-serif focus:outline-emerald-600 sm:px-4"
             >
               <option value="">Select Your Square Footage</option>
               <option value="1000-1500">1000-1500</option>
