--- a/index.html
+++ b/index.html
@@ -138,10 +138,17 @@
               </div>
               <div class="bg-slate-200 py-2 px-4 w-4/5 mx-auto md:w-full">
                 <span
-                  class="inline-flex items-center justify-center bg-white p-2 cursor-pointer"
+                  class="inline-flex items-center justify-center bg-white p-2"
                 >
-                  <i class="fa-solid fa-lock-open mr-2"></i>
-                  <i class="fa-solid fa-lock"></i>
+                  <i class="fa-solid fa-clock-rotate-left"></i>
+                  <!-- <i
+                    class="fa-solid fa-square-plus hidden plus"
+                    style="display: none"
+                  ></i>
+                  <i
+                    class="fa-solid fa-square-minus minus"
+                    style="display: none"
+                  ></i> -->
                 </span>
                 <select
                   id="change-hours-deep"
@@ -200,8 +207,7 @@
                 <span
                   class="inline-flex items-center justify-center bg-white p-2 cursor-pointer"
                 >
-                  <i class="fa-solid fa-lock-open mr-2"></i>
-                  <i class="fa-solid fa-lock"></i>
+                  <i class="fa-solid fa-clock-rotate-left"></i>
                 </span>
                 <select
                   id="change-hours-general"
@@ -255,8 +261,7 @@
                 <span
                   class="inline-flex items-center justify-center bg-white p-2 cursor-pointer"
                 >
-                  <i class="fa-solid fa-lock-open mr-2"></i>
-                  <i class="fa-solid fa-lock"></i>
+                  <i class="fa-solid fa-clock-rotate-left"></i>
                 </span>
                 <select
                   id="change-hours-weekly"
@@ -310,8 +315,7 @@
                 <span
                   class="inline-flex items-center justify-center bg-white p-2 cursor-pointer"
                 >
-                  <i class="fa-solid fa-lock-open mr-2"></i>
-                  <i class="fa-solid fa-lock"></i>
+                  <i class="fa-solid fa-clock-rotate-left"></i>
                 </span>
                 <select
                   id="change-hours-bi-weekly"
@@ -365,8 +369,7 @@
                 <span
                   class="inline-flex items-center justify-center bg-white p-2 cursor-pointer"
                 >
-                  <i class="fa-solid fa-lock-open mr-2"></i>
-                  <i class="fa-solid fa-lock"></i>
+                  <i class="fa-solid fa-clock-rotate-left"></i>
                 </span>
                 <select
                   id="change-hours-monthly"
