fixed number rounding calculations

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               id="square-footage"
               class="py-2 px-0 border-2 block mx-auto my-4 font-serif focus:outline-emerald-600 sm:px-4"
             >
-              <option value="">Select Your Square Footage</option>
+              <option value="" disabled>Select Your Square Footage</option>
               <option value="1000-1500">1000-1500</option>
               <option value="1600-2000">1600-2000</option>
               <option value="2100-2200">2100-2200</option>
@@ -121,7 +121,7 @@
                 </span>
                 <small
                   class="py-2 px-4 bg-emerald-600 text-white font-semibold tracking-widest inline-block w-[90px] deep-price"
-                  >$200</small
+                  >$247.00</small
                 >
               </div>
               <div class="bg-slate-200 py-2 w-4/5 mx-auto mb-3 md:w-full">
@@ -133,7 +133,7 @@
                 </span>
                 <small
                   class="py-2 px-4 bg-emerald-600 text-white font-semibold tracking-widest inline-block w-[90px] deep-hours"
-                  >13.5</small
+                  >6.5</small
                 >
               </div>
               <div class="bg-slate-200 py-2 px-4 w-4/5 mx-auto md:w-full">
@@ -188,7 +188,7 @@
                 </span>
                 <small
                   class="py-2 px-4 bg-emerald-600 text-white font-semibold tracking-widest inline-block w-[90px] general-price"
-                  >$200</small
+                  >$152.00</small
                 >
               </div>
               <div class="bg-slate-200 py-2 w-4/5 mx-auto mb-3 md:w-full">
@@ -200,7 +200,7 @@
                 </span>
                 <small
                   class="py-2 px-4 bg-emerald-600 text-white font-semibold tracking-widest inline-block w-[90px] general-hours"
-                  >13.5</small
+                  >4</small
                 >
               </div>
               <div class="bg-slate-200 py-2 px-4 w-4/5 mx-auto md:w-full">
@@ -242,7 +242,7 @@
                 </span>
                 <small
                   class="py-2 px-4 bg-emerald-600 text-white font-semibold tracking-widest inline-block w-[90px] weekly-price"
-                  >$200</small
+                  >$95.00</small
                 >
               </div>
               <div class="bg-slate-200 py-2 w-4/5 mx-auto mb-3 md:w-full">
@@ -254,7 +254,7 @@
                 </span>
                 <small
                   class="py-2 px-4 bg-emerald-600 text-white font-semibold tracking-widest inline-block w-[90px] weekly-hours"
-                  >13.5</small
+                  >2.5</small
                 >
               </div>
               <div class="bg-slate-200 py-2 px-4 w-4/5 mx-auto md:w-full">
@@ -296,7 +296,7 @@
                 </span>
                 <small
                   class="py-2 px-4 bg-emerald-600 text-white font-semibold tracking-widest inline-block w-[90px] bi-weekly-price"
-                  >$200</small
+                  >$114.00</small
                 >
               </div>
               <div class="bg-slate-200 py-2 w-4/5 mx-auto mb-3 md:w-full">
@@ -308,7 +308,7 @@
                 </span>
                 <small
                   class="py-2 px-4 bg-emerald-600 text-white font-semibold tracking-widest inline-block w-[90px] bi-weekly-hours"
-                  >13.5</small
+                  >3</small
                 >
               </div>
               <div class="bg-slate-200 py-2 px-4 w-4/5 mx-auto md:w-full">
@@ -350,7 +350,7 @@
                 </span>
                 <small
                   class="py-2 px-4 bg-emerald-600 text-white font-semibold tracking-widest inline-block w-[90px] monthly-price"
-                  >$200</small
+                  >$123.50</small
                 >
               </div>
               <div class="bg-slate-200 py-2 w-4/5 mx-auto mb-3 md:w-full">
@@ -362,7 +362,7 @@
                 </span>
                 <small
                   class="py-2 px-4 bg-emerald-600 text-white font-semibold tracking-widest inline-block w-[90px] monthly-hours"
-                  >13.5</small
+                  >3.25</small
                 >
               </div>
               <div class="bg-slate-200 py-2 px-4 w-4/5 mx-auto md:w-full">
