added changed icon display feature

--- a/index.html
+++ b/index.html
@@ -99,13 +99,15 @@
             class="quotes-container text-center px-3 space-y-5 md:space-y-0 md:space-x-5 md:flex md:justify-center md:flex-wrap md:gap-y-5 sm:px-10"
           >
             <!-- Deep Clean -->
-            <article class="p-3 bg-[#f8f3f9]">
+            <article
+              class="p-3 bg-[#f8f3f9] border-2 border-transparent transition-all duration-300"
+            >
               <i
                 class="fa-solid fa-hand-sparkles p-4 text-xl bg-white rounded-full"
               ></i>
               <small
-                class="bg-red-500 p-2 rounded-full text-white font-semibold tracking-wider"
-                >Changed</small
+                class="bg-red-400 p-2 rounded-full text-white font-semibold tracking-wider deep-changed hidden"
+                >Hours Changed</small
               >
               <h3
                 class="capitalize tracking-wider font-bold font-serif text-xl my-4"
@@ -170,10 +172,16 @@
             <!-- End Of Deep Clean -->
 
             <!-- General Clean -->
-            <article class="p-3 bg-[#f8f3f9]">
+            <article
+              class="p-3 bg-[#f8f3f9] border-2 border-transparent transition-all duration-300"
+            >
               <i
                 class="fa-solid fa-spray-can-sparkles p-4 text-xl bg-white rounded-full"
               ></i>
+              <small
+                class="bg-red-400 p-2 rounded-full text-white font-semibold tracking-wider deep-changed hidden"
+                >Hours Changed</small
+              >
               <h3
                 class="capitalize tracking-wider font-bold font-serif text-xl my-4"
               >
@@ -224,10 +232,16 @@
             <!-- End Of General Clean -->
 
             <!-- Weekly Clean -->
-            <article class="p-3 bg-[#f8f3f9]">
+            <article
+              class="p-3 bg-[#f8f3f9] border-2 border-transparent transition-all duration-300"
+            >
               <i
                 class="fa-solid fa-calendar-week p-4 text-xl bg-white rounded-full"
               ></i>
+              <small
+                class="bg-red-400 p-2 rounded-full text-white font-semibold tracking-wider deep-changed hidden"
+                >Hours Changed</small
+              >
               <h3
                 class="capitalize tracking-wider font-bold font-serif text-xl my-4"
               >
@@ -278,10 +292,16 @@
             <!-- End Of Weekly Clean -->
 
             <!-- Bi-Weekly Clean -->
-            <article class="p-3 bg-[#f8f3f9]">
+            <article
+              class="p-3 bg-[#f8f3f9] border-2 border-transparent transition-all duration-300"
+            >
               <i
                 class="fa-solid fa-calendar-day p-4 text-xl bg-white rounded-full"
               ></i>
+              <small
+                class="bg-red-400 p-2 rounded-full text-white font-semibold tracking-wider deep-changed hidden"
+                >Hours Changed</small
+              >
               <h3
                 class="capitalize tracking-wider font-bold font-serif text-xl my-4"
               >
@@ -332,10 +352,16 @@
             <!-- End Of Bi-Weekly Clean -->
 
             <!-- Monthly Clean -->
-            <article class="p-3 bg-[#f8f3f9]">
+            <article
+              class="p-3 bg-[#f8f3f9] border-2 border-transparent transition-all duration-300"
+            >
               <i
                 class="fa-solid fa-calendar-days p-4 text-xl bg-white rounded-full"
               ></i>
+              <small
+                class="bg-red-400 p-2 rounded-full text-white font-semibold tracking-wider deep-changed hidden"
+                >Hours Changed</small
+              >
               <h3
                 class="capitalize tracking-wider font-bold font-serif text-xl my-4"
               >
