--- a/index.html
+++ b/index.html
@@ -140,17 +140,9 @@
               </div>
               <div class="bg-slate-200 py-2 px-4 w-4/5 mx-auto md:w-full">
                 <span
-                  class="inline-flex items-center justify-center bg-white p-2"
+                  class="inline-flex items-center justify-center bg-white p-2 cursor-pointer"
                 >
                   <i class="fa-solid fa-clock-rotate-left"></i>
-                  <!-- <i
-                    class="fa-solid fa-square-plus hidden plus"
-                    style="display: none"
-                  ></i>
-                  <i
-                    class="fa-solid fa-square-minus minus"
-                    style="display: none"
-                  ></i> -->
                 </span>
                 <select
                   id="change-hours-deep"
