added number icon feature

--- a/index.html
+++ b/index.html
@@ -109,6 +109,9 @@
                 class="bg-red-400 p-2 rounded-full text-white font-semibold tracking-wider deep-changed hidden"
                 >Hours Changed</small
               >
+              <small
+                class="p-2 rounded-full text-white font-semibold tracking-wider num-icon hidden"
+              ></small>
               <h3
                 class="capitalize tracking-wider font-bold font-serif text-xl my-4"
               >
@@ -174,6 +177,9 @@
                 class="bg-red-400 p-2 rounded-full text-white font-semibold tracking-wider deep-changed hidden"
                 >Hours Changed</small
               >
+              <small
+                class="p-2 rounded-full text-white font-semibold tracking-wider num-icon hidden"
+              ></small>
               <h3
                 class="capitalize tracking-wider font-bold font-serif text-xl my-4"
               >
@@ -234,6 +240,9 @@
                 class="bg-red-400 p-2 rounded-full text-white font-semibold tracking-wider deep-changed hidden"
                 >Hours Changed</small
               >
+              <small
+                class="p-2 rounded-full text-white font-semibold tracking-wider num-icon hidden"
+              ></small>
               <h3
                 class="capitalize tracking-wider font-bold font-serif text-xl my-4"
               >
@@ -294,6 +303,9 @@
                 class="bg-red-400 p-2 rounded-full text-white font-semibold tracking-wider deep-changed hidden"
                 >Hours Changed</small
               >
+              <small
+                class="p-2 rounded-full text-white font-semibold tracking-wider num-icon hidden"
+              ></small>
               <h3
                 class="capitalize tracking-wider font-bold font-serif text-xl my-4"
               >
@@ -354,6 +366,9 @@
                 class="bg-red-400 p-2 rounded-full text-white font-semibold tracking-wider deep-changed hidden"
                 >Hours Changed</small
               >
+              <small
+                class="p-2 rounded-full text-white font-semibold tracking-wider num-icon hidden"
+              ></small>
               <h3
                 class="capitalize tracking-wider font-bold font-serif text-xl my-4"
               >
