added more option values for the change hours

--- a/index.html
+++ b/index.html
@@ -152,6 +152,10 @@
                   class="border-2 font-serif py-[.35rem] px-1 text-sm cursor-pointer focus:outline-emerald-600"
                 >
                   <option value="">Change Hours</option>
+                  <option value="-2.00">-2.00</option>
+                  <option value="-1.75">-1.75</option>
+                  <option value="-1.50">-1.50</option>
+                  <option value="-1.25">-1.25</option>
                   <option value="-1">-1</option>
                   <option value="-.75">-.75</option>
                   <option value="-.50">-.50</option>
@@ -161,6 +165,10 @@
                   <option value=".50">+.50</option>
                   <option value=".75">+.75</option>
                   <option value="1">+1</option>
+                  <option value="1.25">+1.25</option>
+                  <option value="1.50">+1.50</option>
+                  <option value="1.75">+1.75</option>
+                  <option value="2.00">+2.00</option>
                 </select>
               </div>
             </article>
@@ -220,10 +228,23 @@
                   class="border-2 font-serif py-[.35rem] px-1 text-sm cursor-pointer focus:outline-emerald-600"
                 >
                   <option value="">Change Hours</option>
+                  <option value="-2">-2</option>
+                  <option value="-1.75">-1.75</option>
+                  <option value="-1.50">-1.50</option>
+                  <option value="-1.25">-1.25</option>
+                  <option value="-1">-1</option>
+                  <option value="-.75">-.75</option>
+                  <option value="-.50">-.50</option>
+                  <option value="-.25">-.25</option>
                   <option value="0">0</option>
                   <option value=".25">+.25</option>
                   <option value=".50">+.50</option>
                   <option value=".75">+.75</option>
+                  <option value="1">+1</option>
+                  <option value="1.25">+1.25</option>
+                  <option value="1.50">+1.50</option>
+                  <option value="1.75">+1.75</option>
+                  <option value="2">+2</option>
                 </select>
               </div>
             </article>
@@ -283,10 +304,23 @@
                   class="border-2 font-serif py-[.35rem] px-1 text-sm cursor-pointer focus:outline-emerald-600"
                 >
                   <option value="">Change Hours</option>
+                  <option value="-2">-2</option>
+                  <option value="-1.75">-1.75</option>
+                  <option value="-1.50">-1.50</option>
+                  <option value="-1.25">-1.25</option>
+                  <option value="-1">-1</option>
+                  <option value="-.75">-.75</option>
+                  <option value="-.50">-.50</option>
+                  <option value="-.25">-.25</option>
                   <option value="0">0</option>
                   <option value=".25">+.25</option>
                   <option value=".50">+.50</option>
                   <option value=".75">+.75</option>
+                  <option value="1">+1</option>
+                  <option value="1.25">+1.25</option>
+                  <option value="1.50">+1.50</option>
+                  <option value="1.75">+1.75</option>
+                  <option value="2">+2</option>
                 </select>
               </div>
             </article>
@@ -346,10 +380,23 @@
                   class="border-2 font-serif py-[.35rem] px-1 text-sm cursor-pointer focus:outline-emerald-600"
                 >
                   <option value="">Change Hours</option>
+                  <option value="-2">-2</option>
+                  <option value="-1.75">-1.75</option>
+                  <option value="-1.50">-1.50</option>
+                  <option value="-1.25">-1.25</option>
+                  <option value="-1">-1</option>
+                  <option value="-.75">-.75</option>
+                  <option value="-.50">-.50</option>
+                  <option value="-.25">-.25</option>
                   <option value="0">0</option>
                   <option value=".25">+.25</option>
                   <option value=".50">+.50</option>
                   <option value=".75">+.75</option>
+                  <option value="1">+1</option>
+                  <option value="1.25">+1.25</option>
+                  <option value="1.50">+1.50</option>
+                  <option value="1.75">+1.75</option>
+                  <option value="2">+2</option>
                 </select>
               </div>
             </article>
@@ -409,10 +456,23 @@
                   class="border-2 font-serif py-[.35rem] px-1 text-sm cursor-pointer focus:outline-emerald-600"
                 >
                   <option value="">Change Hours</option>
+                  <option value="-2">-2</option>
+                  <option value="-1.75">-1.75</option>
+                  <option value="-1.50">-1.50</option>
+                  <option value="-1.25">-1.25</option>
+                  <option value="-1">-1</option>
+                  <option value="-.75">-.75</option>
+                  <option value="-.50">-.50</option>
+                  <option value="-.25">-.25</option>
                   <option value="0">0</option>
                   <option value=".25">+.25</option>
                   <option value=".50">+.50</option>
                   <option value=".75">+.75</option>
+                  <option value="1">+1</option>
+                  <option value="1.25">+1.25</option>
+                  <option value="1.50">+1.50</option>
+                  <option value="1.75">+1.75</option>
+                  <option value="2">+2</option>
                 </select>
               </div>
             </article>
